# SZE-Prog-Gyak

./: .gitignore  README.md
2024/Gyak02/: .gitignore  02_main_while_bkereosdi.cpp  03_ameddigegyenlo.cpp  04_negyzet_main.cpp  05_lepcso.cpp  CMakeLists.txt  README.md  main.cpp
2024/Gyak03/: CMakeLists.txt
2024/Gyak04/: CMakeLists.txt  README.md  main.cpp  masodfoku_egyenet.cpp  sinus_gorbe.cpp
2024/Gyak05/: CMakeLists.txt  README.md  main.cpp  maximum_szam.cpp  nagyobb_szomszedos.cpp
2024/Gyak06/: CMakeLists.txt  README.md  fugg_bekeres.cpp  haromszog.cpp  koordinata.cpp  main.cpp  memoria_egyszeru.cpp
2024/Gyak07/: CMakeLists.txt  README.md  main.cpp  tombos_mutatos.cpp
2024/Gyak08/: CMakeLists.txt  dinamikus_struktura.cpp  karaktertombos.cpp  main.cpp
2024/Gyak09/: CMakeLists.txt  Readme.md  main.cpp  matrixos.cpp  pascal_arg.cpp  viginere.cpp
2024/Gyak10/: CMakeLists.txt  README.md  ceg.cpp  ceg.h  (+5 more)
2024/vizsga04/: CMakeLists.txt  main.cpp  vizsga02.cpp  vizsga03.cpp  vizsga04.cpp  vizsga05.cpp  vizsga06.cpp
2025/Vizsga02/: CMakeLists.txt  ex_02_matrix_transpose.cpp  ex_03_dyn.cpp  ex_04_linked_list.cpp  ex_05_multiply_table.cpp  main.cpp
2025/Vizsga03/: CMakeLists.txt  main.cpp  vizsga_diadic.cpp  vizsga_haromszog.cpp  vizsga_list_length.cpp  vizsga_triibonacci.cpp
2026/: CMakeLists.txt  gyak_feladatok.md  website.txt
2026/Szorgalmi/: algorithms.md  computer_graphics.md
2026/Week1/: Assignments.md  CMakeLists.txt
2026/Week1/ex01/: ex01.cpp
2026/Week1/ex02/: ex02.cpp
2026/Week1/ex03/: ex03.cpp
2026/Week1/ex04/: ex04.cpp
2026/Week1/ex05/: ex05.cpp
2026/Week1/ex06/: ex06.cpp
2026/Week1/ex07/: ex07.cpp
2026/Week1/ex08/: ex08.cpp
2026/Week1/ex09/: ex09.cpp
2026/Week1/ex10/: ex10.cpp
2026/Week1/ex11/: ex11.cpp
2026/Week1/ex12/: ex12.cpp
2026/Week11/: CMakeLists.txt
2026/Week11/grp0/: ex01_linked_list.cpp  ex02_linked_list_forward_backward.cpp
2026/Week12/: CMakeLists.txt
2026/Week12/grp0/: ex01_ism_dinamikus_memoriafoglalas.cpp  ex02_dyn_memory_management.cpp
2026/Week12/grp1/: ex01_file_writer.cpp  ex02_dice_throwing.cpp
2026/Week13/: CMakeLists.txt
2026/Week13/grp01/: ex01_read_file_line_by_line.cpp  ex02_reaf_file_tabs.cpp  ex03_fajl_meret.cpp  ex04_binaris_fajlbeolvasas.cpp  ex05_png_read_file.cpp  input.txt  lista.txt
2026/Week14/: CMakeLists.txt
2026/Week14/grp01/: ex_01_very_beginning.cpp  ex_02_palindrome_test.cpp  ex_03_polar_coord_cartesian_coord.cpp  ex_04_coord_array.cpp  exam_exercises.md
2026/Week2/: Assigments.md  CMakeLists.txt
2026/Week2/grp01/: ex03.cpp  ex_10_fibonacci.cpp
2026/Week2/grp02/: ex10_newton_sqroot.cpp  ex11_monte_carlo.cpp  ex11_monte_carlo_std_old.cpp
2026/Week2/grp03/: ex02_gcd.cpp  ex04_decimal_to_binary.cpp
2026/Week2/grp04/: ex01_born.cpp
2026/Week3/: Assignments.md  CMakeLists.txt
2026/Week3/grp01/: ex01_bmi.cpp  ex02_calculator.cpp  ex03_quantum_gate_selector.cpp  ex04_star_spectralclassifier.cpp
2026/Week3/grp02/: ex02_hanoi_tower.cpp
2026/Week3/grp03/: ex00_pythagoras.cpp  ex01_throw.cpp  ex02_eucldiean_distance.cpp  ex04_sigmoid_function.cpp  ex07_quantum_harmonic_oscillator.cpp
2026/Week3/grp04/: ex01_fill_random_numbers.cpp  ex02_minmax_search.cpp  ex03_check_arithmetic_progression.cpp  ex04_median_of_list.cpp  ex05_average.cpp  ex06_shift_array.cpp  ex07_insertion_sort.cpp
2026/Week4/: Assignment.md  CMakeLists.txt
2026/Week4/grp01/: ex01_reverse_string.cpp  ex02_palindrome_checker.cpp
2026/Week4/grp02/: ex01_character_type_count.cpp  ex02_word_count.cpp
2026/Week5/: Assignment.md  CMakeLists.txt
2026/Week5/grp01/: common.h  ex01_taylor_sine.cpp  ex02_taylor_exponential.cpp
2026/Week5/grp02/: ex01_point2d_euclidean.cpp  ex03_complex_number_example.cpp
2026/Week6/: Assignments.md  CMakeLists.txt
2026/Week6/grp01/: ex01_memory_adress.cpp  ex02_pointer_remote_control.cpp  ex03_double_pointer.cpp  ex04_pointer_arithmetic.cpp
2026/Week6/grp02/: ex01_swap_with_pointers.cpp  ex02_multiple_return_values.cpp
2026/Week6/grp03/: ex01_calibration.cpp
2026/Week6/grp04/: common.h  ex01_dyn_mem_heap.cpp  ex02_dyn_mem.cpp  ex03_dyn_array.cpp  ex04_memory_leak.cpp
2026/Week6/grp05/: ex01_arrow_operator.cpp  ex02_dyn_particle.cpp
2026/Week7/: 00_theory.md  Assignments.md  CMakeLists.txt
2026/Week7/grp01/: ex01_basic.cpp
2026/Week7/grp02/: common.h  ex01_double_cycle.cpp  ex02_directed_traversal.cpp  ex03_boundary_checking.cpp  ex04_manual_initialization.cpp
2026/Week7/grp03/: ex01_vending_machine.cpp  ex02_vending_machine_structs.cpp
2026/Week8/: 00_theory.md  CMakeLists.txt  assignments.md
2026/Week8/grp00/: ex01_pointer_magic.cpp  ex02_pointer_function.cpp
2026/Week8/grp01/: common.h  ex01_matrix_elementwise_addition.cpp  ex02_transformation_multiplication.cpp  ex03_addition_vector.cpp
2026/Week8/grp02/: ex01_linked_list_manual.cpp  ex02_linked_list_traversal.cpp  ex03_linked_list_huge.cpp  linked_list.h
2026/Week8/suppl/: ex01_sin_taylor.cpp  ex02_persons.cpp  hf_assignments.md
2026/Week9/: CMakeLists.txt
2026/Week9/grp01/: ex01_point3d_linked_list.cpp  ex02_sum_linked_list.cpp
Gyak1_1_Szambekeres_Cpp/: Gyak1_Szambekeres_Cpp.vcxproj
Gyak1_3_abszolut_Cpp/: Gyak1_3_abszolut.cpp  Gyak1_3_abszolut.vcxproj.filters
Gyak1_4_Nagyobbkisebb_Cpp/: Gyak1_4_Nagyobbkisebb.cpp  Gyak1_4_Nagyobbkisebb.vcxproj  Gyak1_4_Nagyobbkisebb.vcxproj.filters
Gyak1_6_Faktorialis/: Gyak1_6_Faktorialis.cpp  Gyak1_6_Faktorialis.vcxproj.filters
Gyak1_7_Fizzbuzz/: Gyak1_7_Fizzbuzz.vcxproj  Gyak1_7_Fizzbuzz.vcxproj.filters
Gyak1_8_Primszam/: Gyak1_8_Primszam.cpp  Gyak1_8_Primszam.vcxproj
HW_desc/: Week6.md  Week7.md  Week8.md  Week9.md
Week03/: Week3.sln
Week05/: Week5.sln
Week06/: Week6.sln
Week11/: Week11.sln
Week12/: Week12.sln
Week13/: Week13.sln
Week7/: Week7.sln
Week8/: Week8.sln
Week9/: Week9.sln
bonus/computer_graphics/00_basic_framework/: CMakeLists.txt
bonus/computer_graphics/00_basic_framework/include/basic_framework/: glfw_base.hpp
bonus/computer_graphics/00_basic_framework/src/: glfw_base.cpp  main.cpp
(+424 files in other folders)
