cmake_minimum_required(VERSION 4.1)
project(hw_2026)

set(CMAKE_CXX_STANDARD 20)

add_executable(hw_2026 main.cpp)

add_subdirectory(Week1)
add_subdirectory(Week2)
add_subdirectory(Week3)
add_subdirectory(Week4)
add_subdirectory(Week5)
add_subdirectory(Week6)
add_subdirectory(Week7)
add_subdirectory(Week8)
