cmake_minimum_required(VERSION 3.26)
project(01_Egenylo)

set(CMAKE_CXX_STANDARD 17)

add_executable(01_Egenylo main.cpp)

add_executable(02_bekerosdi
        02_main_while_bkereosdi.cpp)

add_executable(03_ameddigegyenlo
        03_ameddigegyenlo.cpp)

add_executable(04_negyzet
        04_negyzet_main.cpp)
add_executable(05_lepcso 05_lepcso.cpp)
