cmake_minimum_required(VERSION 3.22)
project(vizsga04)

set(CMAKE_CXX_STANDARD 17)

add_executable(vizsga04 main.cpp)
add_executable(vizsga04_02 vizsga02.cpp)
add_executable(vizsga03 vizsga03.cpp)
add_executable(vizsga04_04 vizsga04.cpp)
add_executable(vizsga05 vizsga05.cpp)
add_executable(vizsga04_06 vizsga06.cpp)
