cmake_minimum_required(VERSION 3.28)
project(Vizsga02)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_SCAN_FOR_MODULES OFF)
add_executable(Vizsga02_01 main.cpp)

add_executable(Vizsga02_02 ex_02_matrix_transpose.cpp)

add_executable(Vizsga02_03 ex_03_dyn.cpp)
add_executable(Vizsga02_04 ex_04_linked_list.cpp)
add_executable(Vizsga02_05 ex_05_multiply_table.cpp)
