project(week01)
cmake_minimum_required(VERSION 3.10)
set(CMAKE_CXX_STANDARD 20)

add_executable(ex01 ex01/ex01.cpp)
add_executable(ex02 ex02/ex02.cpp)
add_executable(ex03 ex03/ex03.cpp)
add_executable(ex04 ex04/ex04.cpp)
add_executable(ex05 ex05/ex05.cpp)
add_executable(ex06 ex06/ex06.cpp)
add_executable(ex07 ex07/ex07.cpp)
add_executable(ex08 ex08/ex08.cpp)
add_executable(ex09 ex09/ex09.cpp)
add_executable(ex10 ex10/ex10.cpp)
add_executable(ex11 ex11/ex11.cpp)
add_executable(ex12 ex12/ex12.cpp)
