add_executable(grp01_ex01_bmi grp01/ex01_bmi.cpp)
add_executable(grp01_ex02_calculator grp01/ex02_calculator.cpp)
add_executable(grp01_ex03_quantum_gate grp01/ex03_quantum_gate_selector.cpp)
add_executable(grp01_ex04_star_classifier grp01/ex04_star_spectralclassifier.cpp)
add_executable(grp02_ex02_hanoi grp02/ex02_hanoi_tower.cpp)
add_executable(grp03_ex00_pythagoras grp03/ex00_pythagoras.cpp)
add_executable(grp03_ex01_throw grp03/ex01_throw.cpp)
add_executable(grp04_ex01_fill_numbers_array grp04/ex01_fill_random_numbers.cpp)
add_executable(grp04_ex02_minmax_search grp04/ex02_minmax_search.cpp)
add_executable(grp04_ex05_average grp04/ex05_average.cpp)
add_executable(grp04_ex06_shift grp04/ex06_shift_array.cpp)
add_executable(grp03_ex02_euclidean grp03/ex02_eucldiean_distance.cpp)
add_executable(grp03_ex04_sigmoid_function grp03/ex04_sigmoid_function.cpp)
add_executable(grp03_ex07_quantum_harmonic_oscillator grp03/ex07_quantum_harmonic_oscillator.cpp)
add_executable(grp04_ex03_check_arithmetic_progression grp04/ex03_check_arithmetic_progression.cpp)
add_executable(grp04_ex04_median_of_list grp04/ex04_median_of_list.cpp)
add_executable(grp04_ex07_insertion_sort grp04/ex07_insertion_sort.cpp)
